Deployed via Azure App Service Extension

--- a/template.html
+++ b/template.html
@@ -23,7 +23,7 @@
     <img src="./images/node-logo.svg" alt="Azure App Service">
 
     <!-- Make some edits!! -->
-    <h1> Welcome to Azure! </h1>
+    <h1> Welcome to me!! </h1>
 
     <p>This is a simple Node application hosted on Azure App Service at <a href="/" id='host'></a></p>
 
